--- a/libRaftExt/libRaftExt.vcxproj
+++ b/libRaftExt/libRaftExt.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A6BC20F5-806C-46D1-9C5D-CA95B68AAA51}</ProjectGuid>
-    <RootNamespace>libRaftCore</RootNamespace>
+    <ProjectGuid>{BE68141F-E730-4EB7-B0AE-397F6BBE56E1}</ProjectGuid>
+    <RootNamespace>libRaftExt</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <Keyword>MFCDLLProj</Keyword>
   </PropertyGroup>
@@ -55,17 +55,16 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>LIBRAFTCORE_DLL;LIBRAFTCORE_EXPORTS;_WINDOWS;_DEBUG;_AFXEXT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>LIBRAFTEXT_DLL;LIBRAFTEXT_EXPORTS;_WINDOWS;_DEBUG;_AFXEXT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>../include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Work/libRaft/libRaftExt\;../include;D:/Work/libRaft/libRaftCore/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <ModuleDefinitionFile>.\libRaftCore.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>.\libRaftExt.def</ModuleDefinitionFile>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>log4cxx.lib;rocksdb.lib;libRaftCore.lib;Rpcrt4.lib</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -91,7 +90,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ModuleDefinitionFile>.\libRaftCore.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>.\libRaftExt.def</ModuleDefinitionFile>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -115,52 +114,102 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="libRaftCore.cpp" />
-    <ClCompile Include="Progress.cpp" />
-    <ClCompile Include="Raft.cpp" />
-    <ClCompile Include="RaftConfig.cpp" />
-    <ClCompile Include="RaftEntry.cpp" />
-    <ClCompile Include="RaftMemLog.cpp" />
-    <ClCompile Include="RaftMemStorage.cpp" />
-    <ClCompile Include="RaftQueue.cpp" />
-    <ClCompile Include="RaftSemaphore.cpp" />
-    <ClCompile Include="RaftSerializer.cpp" />
-    <ClCompile Include="RaftUtil.cpp" />
-    <ClCompile Include="ReadOnly.cpp" />
+    <ClCompile Include="libRaftExt.cpp" />
+    <ClCompile Include="Log4CxxLogger.cpp" />
+    <ClCompile Include="network\EventBase.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\EventSession.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\IoEventBase.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\ListenEventBase.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftAdminClient.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftClientPool.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftClientSession.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftIoBase.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftServer.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\RaftSession.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\rpc.pb.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="network\SequenceID.cpp" />
+    <ClCompile Include="RocksDbStorage.cpp" />
+    <ClCompile Include="services\KvRocksdbService.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="UnstableLog.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="libRaftCore.def" />
-    <None Include="res\libRaftCore.rc2" />
+    <None Include="libRaftExt.def" />
+    <None Include="network\rpc.proto">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </None>
+    <None Include="res\libRaftExt.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="libRaftCore.h" />
-    <ClInclude Include="Progress.h" />
-    <ClInclude Include="Raft.h" />
-    <ClInclude Include="RaftConfig.h" />
-    <ClInclude Include="RaftDef.h" />
-    <ClInclude Include="RaftEntry.h" />
-    <ClInclude Include="RaftLog.h" />
-    <ClInclude Include="RaftLogger.h" />
-    <ClInclude Include="RaftMemLog.h" />
-    <ClInclude Include="RaftMemStorage.h" />
-    <ClInclude Include="RaftQueue.h" />
-    <ClInclude Include="RaftSemaphore.h" />
-    <ClInclude Include="RaftSerializer.h" />
-    <ClInclude Include="RaftStorage.h" />
-    <ClInclude Include="RaftUtil.h" />
-    <ClInclude Include="ReadOnly.h" />
+    <ClInclude Include="libRaftExt.h" />
+    <ClInclude Include="Log4CxxLogger.h" />
+    <ClInclude Include="network\EventBase.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\EventSession.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\IoEventBase.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\ListenEventBase.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftAdminClient.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftClientPool.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftClientSession.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftIoBase.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftServer.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\RaftSession.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\rpc.pb.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="network\SequenceID.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="RocksDbStorage.h" />
+    <ClInclude Include="services\KvRocksdbService.h" />
+    <ClInclude Include="services\KvService.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="UnstableLog.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="libRaftCore.rc" />
+    <ResourceCompile Include="libRaftExt.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
