1、增加Centos7.6 构建文件 2、Centos7.6 测试通过
./build.sh
./configure --enable-debug
make -j2

--- a/TestRaftCore/TestRaftCore.vcxproj.filters
+++ b/TestRaftCore/TestRaftCore.vcxproj.filters
@@ -114,6 +114,7 @@
     <None Include="res\TestRaftCore.rc2">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="Makefile.am" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\TestRaftCore.ico">
