--- a/TestRaftCore/TestRaftCore.vcxproj
+++ b/TestRaftCore/TestRaftCore.vcxproj
@@ -144,6 +144,7 @@
     <ResourceCompile Include="TestRaftCore.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Makefile.am" />
     <None Include="res\TestRaftCore.rc2" />
   </ItemGroup>
   <ItemGroup>
