--- a/libRaftCore/libRaftCore.vcxproj.filters
+++ b/libRaftCore/libRaftCore.vcxproj.filters
@@ -71,6 +71,7 @@
     <None Include="res\libRaftCore.rc2">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="Makefile.am" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
