--- a/TestRaft/TestRaft.vcxproj
+++ b/TestRaft/TestRaft.vcxproj
@@ -63,7 +63,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>cppunitd.lib;testrunnerud.lib;libRaftExt.lib;</AdditionalDependencies>
+      <AdditionalDependencies>cppunitd.lib;testrunnerud.lib;libRaftExt.lib;rocksdb.lib;Rpcrt4.lib</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -109,8 +109,10 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestEventBaseFixtrue.h" />
     <ClInclude Include="TestRaft.h" />
     <ClInclude Include="TestRaftDlg.h" />
+    <ClInclude Include="TestRocksFixtrue.h" />
     <ClInclude Include="TestSeqsFixture.h" />
   </ItemGroup>
   <ItemGroup>
@@ -118,12 +120,20 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestClient.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="TestEventBaseFixtrue.cpp" />
     <ClCompile Include="TestRaft.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="TestRaftDlg.cpp" />
+    <ClCompile Include="TestRocksFixtrue.cpp" />
     <ClCompile Include="TestSeqsFixture.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="TestServer.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
